syntax = "proto3";

option csharp_namespace = "ExchangeVoluteService";

package exchange;

message DailyValuteRequest {
	string date = 1;
}

message DailyValuteResponse {
	string date = 1;
    string name = 2;
    repeated VoluteDTO volute = 3;
}

message VoluteDTO {
    string id = 1;
    int32 numCode = 2;
    string charCode = 3;
    int32 nominal = 4;
    string name = 5;
    string value = 6;
    string vunitRate = 7;
}

service Valute {
	rpc GetCurrentValue (DailyValuteRequest) returns (DailyValuteResponse);
}